--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 
 <div class="nav">
-		<a class="active" href="Index.html">Home</a>
+		<a class="active" href="index.html">Home</a>
 		<a href="about.html">About</a>
 		<a href="contact.html">Contact</a>
 	</div>
